--- a/popup-admin/composer.json
+++ b/popup-admin/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "presatfy/popup-admin",
-  "description": "Responsive Add to Cart Popup for Magento 2.3 — Admin module",
+  "description": "Responsive Added to Cart Popup for Magento 2.3 — Admin module",
   "version": "1.0.0",
   "type": "magento2-module",
   "license": "Simplified BSD License",
