--- a/popup-display/composer.json
+++ b/popup-display/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "presatfy/popup-display",
-  "description": "Responsive Add to Cart Popup for Magento 2.3 — Display Module",
+  "description": "Responsive Added to Cart Popup for Magento 2.3 — Display Module",
   "version": "1.0.0",
   "type": "magento2-module",
   "license": "Simplified BSD License",
