Fix composer package name

--- a/popup-admin/composer.json
+++ b/popup-admin/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "presatfy/popup-admin",
+  "name": "prestafy/popup-admin",
   "description": "Responsive Added to Cart Popup for Magento 2.3 — Admin module",
   "version": "1.0.0",
   "type": "magento2-module",
