--- a/popup-display/composer.json
+++ b/popup-display/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "presatfy/popup-display",
+  "name": "prestafy/popup-display",
   "description": "Responsive Added to Cart Popup for Magento 2.3 — Display Module",
   "version": "1.0.0",
   "type": "magento2-module",
